--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="300dp"
         android:scaleType="fitCenter"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/nasaLogo"/>
+        android:src="@drawable/nasa_logo"/>
 
     <TextView
         android:id="@+id/mainActivityTitle"
