--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/nasaLogo"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:scaleType="fitCenter"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/nasa_logo"/>
-
-    <TextView
-        android:id="@+id/mainActivityTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/MainActivityTitle"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"
-        android:layout_below="@+id/nasaLogo"/>
-
-    <Button
-        android:id="@+id/searchActivityButton"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/mainToolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/searchActivityButtonString"
-        android:layout_below="@+id/mainActivityTitle"/>
+        android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/favouritesActivityButton"
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/favouritesActivityButtonString"
-        android:layout_below="@+id/searchActivityButton"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/mainToolbar">
 
-</RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/nasaLogo"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:scaleType="fitCenter"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/nasa_logo"/>
+
+            <TextView
+                android:id="@+id/mainActivityTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/MainActivityTitle"
+                android:layout_centerHorizontal="true"
+                android:textSize="20sp"
+                android:layout_below="@+id/nasaLogo"/>
+
+            <Button
+                android:id="@+id/searchActivityButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/searchActivityButtonString"
+                android:layout_below="@+id/mainActivityTitle"/>
+
+            <Button
+                android:id="@+id/favouritesActivityButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/favouritesActivityButtonString"
+                android:layout_below="@+id/searchActivityButton"/>
+
+        </RelativeLayout>
+
+        <com.google.android.material.navigation.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/drawer_header_layout"
+            app:menu="@menu/nav_menu"
+            android:id="@+id/nav_view"/>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+
+
+
+</LinearLayout>
