--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,36 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/searchLatitude"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/searchToolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Latitude"/>
+        android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/searchLongitude"
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Longitude"
-        android:layout_below="@id/searchLatitude"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/searchToolbar">
 
-    <EditText
-        android:id="@+id/searchDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Date"
-        android:layout_below="@id/searchLongitude"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/displayResultsButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Search!"
-        android:layout_below="@id/searchDate"/>
+            <EditText
+                android:id="@+id/searchLatitude"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Latitude"/>
 
-</RelativeLayout>
+            <EditText
+                android:id="@+id/searchLongitude"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Longitude"
+                android:layout_below="@id/searchLatitude"/>
+
+            <EditText
+                android:id="@+id/searchDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Date"
+                android:layout_below="@id/searchLongitude"/>
+
+            <Button
+                android:id="@+id/displayResultsButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Search!"
+                android:layout_below="@id/searchDate"/>
+
+        </RelativeLayout>
+
+        <com.google.android.material.navigation.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/drawer_header_layout"
+            app:menu="@menu/nav_menu"
+            android:id="@+id/nav_view"/>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+
+</LinearLayout>
