--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,8 +15,7 @@
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/searchToolbar">
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -26,27 +25,27 @@
                 android:id="@+id/searchLatitude"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Latitude"/>
+                android:hint="@string/latitude"/>
 
             <EditText
                 android:id="@+id/searchLongitude"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Longitude"
+                android:hint="@string/longitude"
                 android:layout_below="@id/searchLatitude"/>
 
             <EditText
                 android:id="@+id/searchDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Date"
+                android:hint="@string/date"
                 android:layout_below="@id/searchLongitude"/>
 
             <Button
                 android:id="@+id/displayResultsButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Search!"
+                android:text="@string/search"
                 android:layout_below="@id/searchDate"/>
 
         </RelativeLayout>
