--- a/app/src/main/res/layout/drawer_header_layout.xml
+++ b/app/src/main/res/layout/drawer_header_layout.xml
@@ -5,15 +5,18 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/headerApplicationName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello world" />
+        android:text="@string/nasa_earth_imagery_database" />
     <TextView
+        android:id="@+id/headerActivityName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Version" />
+        android:text="@string/hello_world" />
     <TextView
+        android:id="@+id/headerVersionNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Name" />
+        android:text="@string/version" />
 </LinearLayout>
