--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_main"
-        android:title="Main Menu"
+        android:title="@string/main_menu"
         android:orderInCategory="500"/>
 
     <item
         android:id="@+id/nav_search"
-        android:title="Search"
+        android:title="@string/search"
         android:orderInCategory="600"/>
 
     <item
         android:id="@+id/nav_favourites"
-        android:title="Favourites"
+        android:title="@string/favourites"
         android:orderInCategory="700"/>
 </menu>
